--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -36,13 +36,19 @@
                 </div>
                 <div class="form-group">
                     <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+                        <u>
+                            <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+                        </u>
                     </p>
                     <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                        <u>
+                            <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                        </u>
                     </p>
                     <p>
-                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
+                        <u>
+                            <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
+                        </u>
                     </p>
                 </div>
             </form>
@@ -83,3 +89,17 @@
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
+<style>
+    h1 {
+        font-weight: bold;
+        font-size: 50px;
+    }
+
+    h4 {
+        font-weight: bold;
+    }
+
+    h1, h4, label, a {
+        color: #DEC20B;
+    } 
+</style>
