Register and Contact page css fixed

--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -70,8 +70,9 @@
                 
                     <div data-callback="captchaVerify" class="g-recaptcha" data-sitekey="6LdZCxEdAAAAACZfBlPZpGb7vhSt5pwpKzRoi9DM" style="transform: scale(0.77); -webkit-transform: scale(1.16); transform-origin: 0 0; -webkit-transform-origin: 0 0;"></div>
                     <div class="recap-buttons form-group">
+                        <input type="submit" id="submitButton" value="Register" class="btn btn-primary" disabled />
                         <input type="reset" value="Reset" class="btn btn-primary" />
-                        <input type="submit" id="submitButton" value="Send" class="btn btn-primary" disabled />
+
                     </div>
                 
                 
