--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -8,7 +8,7 @@
 <h1>YOUR CART</h1>
 @if (CartActions.listItems.Count <= 0)
 {
-    <p>Your cart is currently empty, but your stomach doesn't have to be. Add some items and come back here to checkout.</p>
+    <p class="p-button">Your cart is currently empty, but your stomach doesn't have to be. Add some items and come back here to checkout.</p>
     @using (Html.BeginForm("Menu", "Home", FormMethod.Get))
     {
         <button class="btn btn-primary" type="submit">START ORDER</button>
@@ -79,4 +79,9 @@ else
     }
 }
 
-
+<style>
+    .p-button, h1, th, td {
+        color: #DEC20B;
+        font-weight: bold;
+    }
+</style>
