--- a/Views/Home/Menu.cshtml
+++ b/Views/Home/Menu.cshtml
@@ -33,8 +33,8 @@
 
                         @foreach (var keyValuePair in myDictionary.Value.OrderBy(i => i.Price))
                         {
-                            <p id="price_text">Price: @keyValuePair.Price</p>
-                            <p id="price_text">Size:  @(((VPWebSolutions.Data.Entities.Pizza)keyValuePair).Size)</p>
+                            <p class="p-button" id="price_text">Price: @keyValuePair.Price</p>
+                            <p class="p-button" id="price_text">Size:  @(((VPWebSolutions.Data.Entities.Pizza)keyValuePair).Size)</p>
                             <button class="btn btn-primary" type="button" onclick="AddToCart(@keyValuePair.Id)">Add To Cart</button>
                         }
                     </div>
@@ -51,7 +51,7 @@
                     <div class="border rounded p-1">
                         <img src="~/images/@(item.ImageId).jpg " class="menuImg" />
                         <h4>@item.Name</h4>
-                        <p>Price: @item.Price.ToString("c")</p>
+                        <p class="p-button">Price: @item.Price.ToString("c")</p>
                         <button class="btn btn-primary" type="button" onclick="AddToCart(@item.Id)">Add To Cart</button>
                     </div>
                 </div>
@@ -62,14 +62,18 @@
 }
 
 <style>
-    html, body {
-        background-image: linear-gradient(to right, red, yellow);
+    h1 {
+        font-size: 60px;
     }
-
-    h2 {
-        background-image: linear-gradient(to right, red, yellow);
+    h4 {
+        color: orange;
     }
-
+    h1, h2, .p-button {
+        color: #DEC20B;
+    }
+    .p-button, h1, h2, h4 {
+        font-weight: bold;
+    }
     .menuImg {
         height: 300px;
         width: 100%;
