--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -112,7 +112,7 @@
         width: auto;
         height: auto;
     }
-    .carousel-item-right {
+    .carousel-item-right, h4 {
         color: #DEC20B;
         font-weight: bold;
     }
