--- a/Views/Home/CheckoutPage.cshtml
+++ b/Views/Home/CheckoutPage.cshtml
@@ -103,7 +103,7 @@
             <div id="creditCardInfo">
                 <div class="form-group">
                     <label asp-for="CreditNumber" class="control-label"></label>
-                    <input asp-for="CreditNumber" class="form-control" />
+                    <input asp-for="CreditNumber" class="form-control"/>
                     <span asp-validation-for="CreditNumber" class="text-danger"></span>
                 </div>
                 <div class="form-group">
@@ -167,7 +167,7 @@
 
         var cash = document.getElementById("cash");
 
-        creditCardInfo.style.display = cash.checked ? "none" : "block";
+        creditCardInfo.style.display = cash.checked ? "hidden" : "block";
     }
 
 </script>
