--- a/Views/Home/CheckoutPage.cshtml
+++ b/Views/Home/CheckoutPage.cshtml
@@ -88,7 +88,7 @@
             </div>
 
             <div>
-                <p class="control-label">Method of Payment</p>
+                <p class="p-button control-label">Method of Payment</p>
 
                 <label>
                     <input type="radio" name="type" class="form-control" id="creditCard" onclick="checkMethodPayment()" checked> Credit Card
@@ -108,7 +108,7 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="Month" class="control-label"></label>
-                    <select name="Month" id="Topic">
+                    <select name="Month" id="Topic" style="width:100%;">
                         <option value="" selected disabled hidden>Choose Month</option>
                         <option value="January">January</option>
                         <option value="February">February</option>
@@ -129,8 +129,8 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="Year" class="control-label"></label>
-                    <select id="year" name="Year">
-                        <option>year</option>
+                    <select id="year" name="Year" style="width:100%;">
+                        <option>Year</option>
                         <option value="2021">2021</option>
                         <option value="2022">2022</option>
                         <option value="2023">2023</option>
@@ -159,6 +159,10 @@
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
 <style>
+    h1, h2, li, h3, label, .p-button {
+        color: #DEC20B;
+        font-weight: bold;
+    }
 </style>
 
 <script>
