--- a/Views/UserRoles/Index.cshtml
+++ b/Views/UserRoles/Index.cshtml
@@ -24,7 +24,7 @@
                 <td>@user.Email</td>
                 <td>@string.Join(" , ", user.Roles.ToList())</td>
                 <td>
-                    <a class="btn btn-primary" asp-controller="UserRoles" asp-action="Manage" asp-route-userId="@user.UserIdentityId">Manage Roles</a>
+                    <a class="btn btn-primary" asp-controller="UserRoles" asp-action="Manage" asp-route-previous="" asp-route-userId="@user.UserIdentityId">Manage Roles</a>
                 </td>
             </tr>
         }
