--- a/Views/UserRoles/Manage.cshtml
+++ b/Views/UserRoles/Manage.cshtml
@@ -26,7 +26,7 @@
         <div class="card-footer">
             <input type="submit" value="Update" class="btn btn-primary"
                    style="width:auto" />
-            <a asp-action="" asp-route-id=""
+            <a href="@ViewBag.Refer" 
                class="btn btn-primary" style="width:auto">Cancel</a>
         </div>
     </div>
