--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -115,9 +115,15 @@
                                             <a class="nav-link " asp-area="" asp-controller="UserRoles" asp-action="GetEmployees">Manage Employees</a>
                                         </li>
                                     }
+                                    else if (SignInManager.IsSignedIn(User))
+                                    {
+                                        <li class="nav-item">
+                                            <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Orders">View Orders</a>
+                                        </li>
+                                    }
                                     <li class="nav-item">
                                         <a class="btn btn-primary btn-xlg" href="tel:514-233-5442" background-color:rgba(0,0,238,.5)">
-                                            Delivery in Montréal: <span class="glyphicon glyphicon-earphone"></span>514-233-5442
+                                            Delivery in Montréal: <span class="glyphicon glyphicon-earphone"></span> <br>514-233-5442
                                         </a>
                                     </li>
                                 </ul>
@@ -210,5 +216,10 @@
 
     html, body {
         background-color: #6D47AB;
+    }
+
+    a.nav-link {
+        display: table-cell;
+        vertical-align: middle;
     }
 </style>
