--- a/Views/Manager/Orders.cshtml
+++ b/Views/Manager/Orders.cshtml
@@ -5,7 +5,7 @@
 }
 
 <script type="text/javascript">
-    function myFunction(dropdown) {
+    function filterFunction(dropdown) {
         //todo TEST FOR LAST WEEK AND LAST MONTH
         var selected = dropdown.options[dropdown.selectedIndex].value
         var table = document.getElementsByClassName("table");
@@ -62,7 +62,7 @@
 </script>
 
 <h1>Orders</h1>
-<select id="mySelect" onchange="myFunction(this)">
+<select id="mySelect" onchange="filterFunction(this)">
     <option value="All Orders">All Orders</option>
     <option value="Today">Today</option>
     <option value="Yesterday">Yesterday</option>
@@ -128,10 +128,8 @@
                 @Html.DisplayFor(modelItem => item.OrderAddress)
             </td>
             <td>
-                @* ADD DETAILS VIEW *@
-                @Html.ActionLink("Edit", "EditStatus", new { id = item.Id }, new { @class = "btn btn-primary" }) @*|
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })*@
+                @* todo ADD DETAILS VIEW *@
+                @Html.ActionLink("Edit", "EditStatus", new { id = item.Id }, new { @class = "btn btn-primary" })
             </td>
         </tr>
 }
