Calling on right file, need to fix said file

--- a/Areas/Identity/Pages/Account/Manage/OrderList.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/OrderList.cshtml
@@ -9,7 +9,7 @@
 <partial name="_StatusMessage" model="Model.StatusMessage" />
 <table class="table">
     <tbody>
-        @foreach (var item in Orders) {
+        @foreach (var item in Model.Orders) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.OrderNumber)
