--- a/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -11,7 +11,7 @@
     <li class="nav-item"><a class="nav-link @ManageNavPages.AddressNavClass(ViewContext)" id="address" asp-page="./Address">Address</a></li>
     @if (SignInManager.IsSignedIn(User) && UserManager.GetRolesAsync(UserManager.GetUserAsync(User).Result).Result.Contains("Customer"))
     {
-        <li class="nav-item"><a class="nav-link @ManageNavPages.IndexNavClass(ViewContext)" id="orders" asp-page="./Orders">Orders</a></li>
+        <li class="nav-item"><a class="nav-link @ManageNavPages.IndexNavClass(ViewContext)" id="orderlist" asp-page="./OrderList">Orders</a></li>
     }
 
     <li class="nav-item"><a class="nav-link @ManageNavPages.ChangePasswordNavClass(ViewContext)" id="change-password" asp-page="./ChangePassword">Password</a></li>
