Pushing database changes, nothing working

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -2,6 +2,7 @@
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
+@using VPWebSolutions.Logic
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -69,7 +70,7 @@
                                         </li>
                                     }
                                     else if (SignInManager.IsSignedIn(User) && UserManager.GetRolesAsync(UserManager.GetUserAsync(User).Result).Result.Contains("Manager"))
-                                    {                                     
+                                    {
                                         <li class="nav-item">
                                             <a class="nav-link " asp-area="" asp-controller="UserRoles" asp-action="GetEmployees">Manage Employees</a>
                                         </li>
@@ -83,12 +84,13 @@
                                 <partial name="_LoginPartial" />
                                 <button id="language-change" onclick="changeLanguage()">FR</button>
                                 <!--https://www.flaticon.com/premium-icon/shopping-cart_2838895?term=cart&page=1&position=1&page=1&position=1&related_id=2838895&origin=tag-->
-                                <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Cart"><img class="cart-icon" src="~/images/cart-icon.png" style="height:50px" /></a>
+                                <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Cart"><img class="cart-icon" src="~/images/cart-icon.png" style="height:50px"><p id="cartCount">@CartActions.listItems.Count()</p></a>
+                                
                             </div>
                         </div>
                     }
                 </nav>
-                </header>
+            </header>
             <div class="container mb-3">
                 <main role="main" class="pb-3">
                     @RenderBody()
